--- a/003 package node/003 return file indexHtml script/index.html
+++ b/003 package node/003 return file indexHtml script/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title></title>
-
+	
 </head>
 <body>
 	<div style="border: 1px solid black; padding:100px;">
-		hello
+		hello1
 	</div>
+	<script src="public/some.js"></script>
 </body> 
 </html>
