--- a/003 package node/003 return file indexHtml script/public/index.html
+++ b/003 package node/003 return file indexHtml script/public/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title></title>
-	
+	<script src="src/some.js"></script>
 </head>
 <body>
 	<div style="border: 1px solid black; padding:100px;">
-		hello1
+		hello
 	</div>
-	<script src="public/some.js"></script>
+	
 </body> 
 </html>
